starter-repos/app-template/validation/resources/service-constraints.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

## this constraint is intended to run in a pre-commit hook which prevents
## teams to create specific kinds in their config.  the example of this is
## services in an org, say, that centrally manages them so they can monitor
## ingress.

## TODO make sure it's only looking at Services, right now it only checks the type
## TODO consider making it take a GVK and a type

apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowservicetypes
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowServiceTypes
        listKind: K8sDisallowServiceTypesList
        plural: K8sDisallowServiceTypes
        singular: K8sDisallowServiceTypes
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            serviceTypes:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowservicetypes

        violation[{"msg": msg}] {
          disallowed := {serviceTypes | serviceTypes := input.parameters.serviceTypes[_]}
          input.review.kind.kind == "Service"
          input.review.kind.group == ""
                obj := input.review.object
          disallowed[obj.spec.type]
                msg := sprintf("Object %v is using disallowed type %s of kind %s", [obj.metadata.name, obj.spec.type, obj.kind])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowServiceTypes
metadata:
  name: no-load-balancers
spec:
  parameters:
    serviceTypes:
      - "LoadBalancer"
